--- a/src/components/Carousel.scss
+++ b/src/components/Carousel.scss
@@ -1,1 +1,34 @@
-// style go here
+.carousel {
+  overflow: hidden;
+
+  &__list {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__button {
+    border: 3px solid #757373;
+    border-radius: 15px;
+    padding: 5px;
+    width: 50px;
+    cursor: pointer;
+    transition:  background-color 0.3s ease;
+
+    &:hover {
+      border-color:#644545
+    }
+
+    &:disabled {
+      cursor: no-drop;
+    }
+  }
+}
+
